<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
         http://maven.apache.org/xsd/maven-4.0.0.xsd">

    <modelVersion>4.0.0</modelVersion>

    <!-- ── Project coordinates ── -->
    <groupId>com.lefestin</groupId>
    <artifactId>le-festin</artifactId>
    <version>1.0-SNAPSHOT</version>
    <packaging>jar</packaging>

    <name>Le Festin</name>
    <description>Recipe Database and Meal Planning System — CMSC 127</description>

    <properties>
        <java.version>17</java.version>
        <maven.compiler.release>${java.version}</maven.compiler.release>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <dependencies>

        <!-- ── 1. MySQL JDBC Driver ── -->
        <!-- JAR: lib/mysql-connector-j-9.6.0.jar -->
        <dependency>
            <groupId>com.mysql</groupId>
            <artifactId>mysql-connector-j</artifactId>
            <version>9.6.0</version>
            <scope>system</scope>
            <systemPath>${project.basedir}/lib/mysql-connector-j-9.6.0.jar</systemPath>
        </dependency>

        <!-- ── 2. BCrypt password hashing ── -->
        <!-- JAR: lib/jbcrypt-0.4.jar  (download from Maven Central and place in lib/) -->
        <dependency>
            <groupId>org.mindrot</groupId>
            <artifactId>jbcrypt</artifactId>
            <version>0.4</version>
            <scope>system</scope>
            <systemPath>${project.basedir}/lib/jbcrypt-0.4.jar</systemPath>
        </dependency>

        <!-- ── 3. Apache Commons CSV ── -->
        <!-- JAR: lib/commons-csv-1.10.0.jar  (download from Maven Central and place in lib/) -->
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-csv</artifactId>
            <version>1.10.0</version>
            <scope>system</scope>
            <systemPath>${project.basedir}/lib/commons-csv-1.10.0.jar</systemPath>
        </dependency>

    </dependencies>

    <build>
        <!-- ── Non-standard source layout ── -->
        <sourceDirectory>src</sourceDirectory>

        <resources>
            <resource>
                <directory>resources</directory>
            </resource>
        </resources>

        <plugins>

            <!-- ── build-helper: adds config/ as a second source root ── -->
            <!-- Required because Maven only supports one <sourceDirectory>;    -->
            <!-- config/ holds com.lefestin.config classes outside src/         -->
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>build-helper-maven-plugin</artifactId>
                <version>3.6.0</version>
                <executions>
                    <execution>
                        <id>add-config-source</id>
                        <phase>generate-sources</phase>
                        <goals><goal>add-source</goal></goals>
                        <configuration>
                            <sources>
                                <source>config</source>
                            </sources>
                        </configuration>
                    </execution>
                </executions>
            </plugin>

            <!-- ── Compiler plugin ── -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.12.1</version>
            </plugin>

            <!-- ── Surefire: runs JUnit 5 tests with mvn test ── -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.2.5</version>
            </plugin>

            <!-- ── Shade plugin: fat JAR with all dependencies bundled ── -->
            <!-- Run with: java -jar target/le-festin-1.0-SNAPSHOT.jar       -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <version>3.5.2</version>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                        <configuration>
                            <transformers>
                                <transformer implementation=
                                  "org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                                    <!-- Change this to your actual main class -->
                                    <mainClass>com.lefestin.Main</mainClass>
                                </transformer>
                            </transformers>
                            <!-- Keep the original thin JAR alongside the fat one -->
                            <shadedArtifactAttached>true</shadedArtifactAttached>
                            <shadedClassifierName>fat</shadedClassifierName>
                        </configuration>
                    </execution>
                </executions>
            </plugin>

        </plugins>
    </build>

</project>